--- a/fitart-master0902/src/index.css
+++ b/fitart-master0902/src/index.css
@@ -20,7 +20,7 @@ html{
 }
 
 body {
-  padding-top: 12rem;
+  padding-top: 0rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
@@ -86,16 +86,16 @@ body {
 
 
 .navbar{
-  height: 9rem;
-  padding: 5rem;
+  height: 10rem;
+  padding: 0rem;
   position: absolute;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   top: 0;
   left: 0;
   right: 0;
-  background: transparent;
+  background:transparent;
   z-index: 12;
 }
 
@@ -113,7 +113,7 @@ body {
 }
 
 .navbar-brand:hover{
-  transform: scale(1.2);
+  transform: scale(1.1);
   backface-visibility: hidden;
 }
 
@@ -277,8 +277,8 @@ body {
 .header-section{
   width: 100%;
   height: 100vh;
-  margin-top: -15rem;
-  padding: 0;
+  margin-top: -10rem;
+  padding: -40;
   position: relative;
   clip-path: polygon(0 0 , 100% 0, 100% 85%, 50% 100%, 0% 85%);
   z-index: 10;
@@ -762,9 +762,9 @@ body {
 /* -------------------------------------------------------------------------- */
 
 .contact{
-  height: 100vh;
-  margin-top: -15rem;
-  padding-top: 10rem;
+  height: 150vh;
+  margin-top: -25rem;
+  padding-top: 35rem;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.5),rgba(3, 3, 3, 0.86)) ,url('./assets/img1.jpg');
   background-repeat: no-repeat;
   background-position: top;
@@ -779,7 +779,7 @@ body {
   max-width: 30rem;
 }
 
-.container{
+.container1{
   margin: 3rem auto;
   width: 80%;
   height: 70%;
@@ -1627,29 +1627,156 @@ a.instagram {
 
 .privacydiv{
   height: 100vh;
-  margin-top: -15rem;
-  padding-top: 10rem;
-  background: linear-gradient(to top, rgba(225, 226, 185, 0.726),rgba(8, 8, 8, 0.86));
+  margin-top: 0rem;
+  padding-top: 0rem;
+  /* background: linear-gradient(to top, rgba(230, 203, 164, 0.726),rgba(8, 8, 8, 0.86)); */
+  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.85)),url('./assets/floor.jpg');
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  color: #777;
+  color: rgb(255, 255, 255);
+  
+  /* clip-path: polygon(0 10rem, 100% 0, 100% 100%, 0 100%);
+  margin-top: -24rem;
+  padding: 25rem 0 0rem 0; */
+}
+
+
+.privacydiv2{
+  height: 100vh;
+  margin-top: 0rem;
+  padding-top: 0rem;
+  /* background: linear-gradient(to top, rgba(230, 203, 164, 0.726),rgba(8, 8, 8, 0.86)); */
+  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.85)),url('./assets/floor.jpg');
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  color: rgba(250, 1, 1, 0.578);
+  
+  /* clip-path: polygon(0 10rem, 100% 0, 100% 100%, 0 100%);
+  margin-top: -24rem;
+  padding: 25rem 0 0rem 0; */
 }
 
  .privacypolicy{
-  margin-top: -5rem;
+  margin-top: -15rem;
   padding-top: 10rem;
   font-size: 1.5rem;
   text-align: center;
-  color: rgb(25, 26, 23);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5),rgba(3, 3, 3, 0.86)) ,url('./assets/privacypolicy3.jpg');
+  color: gray;
+  font-family: 'Oswald', sans-serif;
+  align-items: center;  
   font-weight: lighter;
-  /* font-size:3 rem ;
-  grid-row: 2/2;
-  height: 80%;
+  /* grid-row: 2/2;
+  height: 65%;
   padding: 0 2rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;*/
+  align-items: center; */
  }
+.privacyheading{
+  font-size: 3.5rem;
+  text-align: center;
+  color: whitesmoke;
 
+}
+
+.termsofservices{
+  margin-top: -15rem;
+  padding-top: 10rem;
+  font-size: 1.5rem;
+  text-align: center;
+  background: linear-gradient(to top, rgba(80, 50, 50, 0.5),rgba(59, 22, 22, 0.86)) ,url('./assets/termsofservices.jpg');
+  color: rgb(108, 170, 118);
+  font-family: 'Oswald', sans-serif;
+  align-items: center;  
+  /* font-weight: lighter; */
+}
+/*        -------------------------------       */
+/*        -------------------------------       */
+/*        |            signup           |       */
+/*         ------------------------------       */
+/*         ------------------------------       */
+html body {
+  background-color: #F5F5F5;
+}
+
+/* .container {
+background-color: #f0f5f5;
+padding: 30px;
+margin-top: 30px;
+/*border: 18px double rgba(28,110,164,0.32);
+border: 18px outset rgba(29,117,173,0.32);
+border-radius: 25px;
+max-width: 500px !important; 
+max-height: 600px !important;
+} */
+
+
+#email {
+margin-top: 18px;
+}
+
+.password {
+text-align: right;
+font-style: italic;
+color: #000066;
+}
+
+h2 {
+font-family: 'Ubuntu', sans-serif;
+}
+
+.btn-primary {
+background-color:  #006bb3 !important;
+border: none !important;
+}
+
+.btn-primary:hover  {
+background-color:  #0099ff !important; 
+/*background-color: white !important; */
+color: black !important;
+}
+
+.header {
+text-align: center; 
+padding: 20px;
+}
+
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  color: white;
+  padding: 14px 28px;
+  font-size: 30px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.block:hover {
+  background-color: #ddd;
+  color: black;
+}
+.admin-page{
+  
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  color: rgb(255, 0, 0);
+  padding: 14px 28px;
+  font-size: 40px;
+  cursor: pointer;
+  text-align: center;
+
+}
+
+/*         -------------------------------       */
+/*         -------------------------------       */
+/*        |            signup           |       */
+/*         ------------------------------       */
+/*         ------------------------------       */
